enhance: enhance train-test data splitting

--- a/model.ipynb
+++ b/model.ipynb
@@ -178,10 +178,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "03913906",
+   "execution_count": 55,
+   "id": "df175d9b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([3, 64, 64])"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "img.size()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "73aedfdb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['paper', 'rock', 'scissors']"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class_names = dataset.classes\n",
+    "class_names"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f138104b",
+   "metadata": {},
+   "source": [
+    "## CNN Model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "425827c1",
+   "metadata": {},
    "source": []
   }
  ],
